test : service & controller 구현 및 리팩토링 변경 사항에 따른 테스